--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,4 +1,8 @@
 {
+  "item.tutorialmod.alexandrite": "Alexandrite",
   "item.tutorialmod.zircon": "Zircon",
-  "item.tutorialmod.alexandrite": "Alexandrite"
+
+  "block.tutorialmod.zircon_block": "Block of Zircon",
+
+  "itemGroup.gemstab": "Gemstones & Minerals"
 }
